--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "author": "Ivan Snitko",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^7.1.2"
+  },
+  "devDependencies": {
     "eslint": "^8.40.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "express": "^4.18.2",
-    "mongoose": "^7.1.2",
     "nodemon": "^2.0.22"
   }
 }
