--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "author": "Ivan Snitko",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
-    "mongoose": "^7.1.2"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.1.2",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "eslint": "^8.40.0",
