--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "Ivan Snitko",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "celebrate": "^15.0.1",
     "express": "^4.18.2",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.1.2",
+    "mongoose": "^7.2.2",
     "validator": "^13.9.0"
   },
   "devDependencies": {
